--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -60,8 +60,29 @@ body {
     }
 }
 
+.breadcrumbs {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 30px 0px 20px 0px;
+
+    .breadcrumb {
+        text-decoration: none;
+        padding: 0px;
+        font-family: 'Inter-ExtraLight';
+        background-color: unset;
+        font-size: 14px;
+        text-transform: uppercase;
+        color: @grey4;
+
+        .separator {
+            margin: 0px 10px;
+        }
+    }
+}
+
 .modal-container {
     width: 100%;
+    height: 100%;
     position: absolute;
     top: -1500px;
     z-index: 1000;
@@ -189,5 +210,19 @@ body {
                 background-color: @black;
             }
         }
+    }
+}
+
+.filter-caption {
+    display: none;
+    font-size: 18px;
+
+    @media @large {
+        display: flex;
+        align-items: center;
+    }
+
+    img {
+        margin-left: 10px;
     }
 }
