--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -84,7 +84,7 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: -1500px;
+    top: -150%;
     z-index: 1000;
     transition: all 0.5s;
     padding: 0px 20px;
@@ -117,6 +117,7 @@ body {
         }
 
         .link {
+            cursor: pointer;
             font-size: 18px;
             text-align: right;
             color: @black;
@@ -225,4 +226,40 @@ body {
     img {
         margin-left: 10px;
     }
+}
+
+.color-group {
+    input {
+        display: none;
+
+        &:checked + .label-color {
+            border-color: @black;
+        }
+    }
+
+    .label-color {
+        width: 30px;
+        height: 30px;
+        border: 1px solid @grey2;
+        box-sizing: border-box;
+        border-radius: 50%;
+        padding: 2px;
+        cursor: pointer;
+
+        .color {
+            width: 100%;
+            height: 100%;
+            background: red;
+            border-radius: 50%;
+        }
+    }
+}
+
+.link-grey {
+    font-family: 'Inter-ExtraLight';
+    font-size: 14px;
+    line-height: 17px;
+    text-decoration: underline !important;
+    color: @grey4;
+    cursor: pointer;
 }
