--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -228,6 +228,13 @@ body {
     }
 }
 
+.basket-title {
+    font-family: 'Inter-Medium';
+    font-size: 24px;
+    text-transform: uppercase;
+    color: @black;
+}
+
 .sizes {
     display: flex;
     align-items: center;
