--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -218,7 +218,7 @@ body {
     display: none;
     font-size: 18px;
 
-    @media @large {
+    @media @large {1
         display: flex;
         align-items: center;
     }
@@ -233,6 +233,10 @@ body {
     font-size: 24px;
     text-transform: uppercase;
     color: @black;
+
+    @media @xs {
+        font-size: 18px;
+    }
 }
 
 .sizes {
