--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -55,7 +55,7 @@ body {
     color: @black;
 
     &:hover {
-        color: @white;
+        color: @white !important;
         background: @black;
     }
 }
