подключил запрос списка продуктов

--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -218,7 +218,7 @@ body {
     display: none;
     font-size: 18px;
 
-    @media @large {1
+    @media @large {
         display: flex;
         align-items: center;
     }
