--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -84,7 +84,7 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: -150%;
+    top: -1000px;
     z-index: 1000;
     transition: all 0.5s;
     padding: 0px 20px;
