--- a/frontend/assets/css/variables.less
+++ b/frontend/assets/css/variables.less
@@ -1,11 +1,12 @@
 //Colors
 @black: #000000;
 @white: #ffffff;
+@red: red;
 @grey: #f4f4f3;
 @grey2: #e6e6e6;
 @grey3: #f2f2f2;
 @grey4: #808080;
-@grey5: #C4C4C4;
+@grey5: #c4c4c4;
 @yellow: #e6c643;
 
 //Media
