--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -308,3 +308,35 @@ body {
     cursor: pointer;
 }
 
+.textarea-group {
+    .label {
+        margin: 0px;
+        font-family: 'Inter-Regular';
+        font-size: 14px;
+        color: @grey4;
+        text-transform: uppercase;
+        @media @medium {
+            display: none;
+        }
+    }
+
+    textarea {
+        height: 43px;
+        border: none;
+        border-bottom: 1px solid @black;
+        resize: none;
+        background: @grey3;
+
+        @media @medium {
+            height: 77px;
+        }
+
+        &::placeholder {
+            font-size: 14px;
+            opacity: 0;
+            @media @medium {
+                opacity: 1;
+            }
+        }
+    }
+}
