fix add to basket methods

--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -293,8 +293,8 @@ body {
         .color {
             width: 100%;
             height: 100%;
-            background: red;
             border-radius: 50%;
+            background-size: cover;
         }
     }
 }
