account header and contact form validation

--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -254,8 +254,9 @@ body {
         }
 
         .label-size {
-            width: 30px;
+            min-width: 30px;
             height: 30px;
+            padding: 0px 5px;
             display: flex;
             align-items: center;
             justify-content: center;
