--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -295,7 +295,7 @@ body {
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            background-size: cover;
+            background-position: center;
         }
     }
 }
