adaptive product view page

--- a/frontend/assets/css/variables.less
+++ b/frontend/assets/css/variables.less
@@ -11,6 +11,7 @@
 @yellow: #e6c643;
 
 //Media
+@extraLarge: ~'(max-width: 1199px)';
 @large: ~'(max-width: 991px)';
 @medium: ~'(max-width: 767px)';
 @small: ~'(max-width: 576px)';
