--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -91,6 +91,7 @@ body {
     z-index: 1000;
     padding: 0px 20px;
     transition: all 0.5s ease;
+    background: white;
 
     @media (max-width: 320px) {
         padding: 0px 10px;
