--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -333,6 +333,24 @@ body {
     }
 }
 
+.carousel-control {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    z-index: 100;
+    cursor: pointer;
+    padding: 5px;
+
+    &.next {
+        left: unset;
+        right: 0;
+        transform: rotate(180deg);
+    }
+}
+
 .color-group {
     &.opacity {
         opacity: 0.5;
