fix sizes in product item

--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -313,6 +313,10 @@ body {
             }
         }
 
+        input:disabled + .label-size {
+            opacity: 0.5;
+        }
+
         .label-size {
             min-width: 30px;
             height: 30px;
