--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -295,6 +295,18 @@ body {
     }
 }
 
+.loading {
+    position: relative;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity 0.5s;
+}
+.fade-enter, .fade-leave-to {
+    opacity: 0;
+}
+
 .sizes {
     display: flex;
     align-items: center;
