--- a/frontend/assets/css/main.less
+++ b/frontend/assets/css/main.less
@@ -303,6 +303,7 @@ body {
 .fade-leave-active {
     transition: opacity 0.5s;
 }
+
 .fade-enter, .fade-leave-to {
     opacity: 0;
 }
@@ -315,6 +316,7 @@ body {
 
     .size-box {
         margin-right: 15px;
+
         input {
             display: none;
 
@@ -375,23 +377,37 @@ body {
     input {
         display: none;
 
-        &:checked + .label-color {
+        &:checked + .label-color:before {
             border-color: @black;
         }
     }
 
     .label-color {
+        position: relative;
         width: 30px;
         height: 30px;
-        border: 1px solid @grey2;
         box-sizing: border-box;
         border-radius: 50%;
-        padding: 2px;
         cursor: pointer;
 
-        .color {
+        &:before {
+            content: " ";
+            position: absolute;
+            left: 0;
+            top: 0;
             width: 100%;
             height: 100%;
+            background: @white;
+            border: 1px solid @grey2;
+            border-radius: 50%;
+        }
+
+        .color {
+            position: absolute;
+            left: 4px;
+            top: 4px;
+            width: 22px;
+            height: 22px;
             border-radius: 50%;
             background-position: center;
         }
